<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="380dp"
        android:layout_height="180dp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        app:cornerRadius="15dp"
        app:cardElevation="55dp"
        app:cardBackgroundColor="@color/lighter"
        android:padding="1dp"
        android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:id="@+id/dateOpenedTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:text="@string/opened"
                    android:textSize="12sp"
                    tools:ignore="RelativeOverlap,SmallSp" />

                <Button
                    android:id="@+id/openIssueButton"
                    android:layout_width="60dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/open"
                    android:textSize="7sp"
                    android:background="@drawable/rounded_button"
                    tools:ignore="SmallSp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/issueDescTextView"
                    android:layout_width="390dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/container_card_text"              android:layout_centerHorizontal="true"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_alignParentLeft="true"
                    android:gravity="start"
                    android:layout_marginLeft="5dp" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/issueOwnerTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:text="@string/owner"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="textStart"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:layout_marginLeft="5dp"
                    android:layout_alignParentLeft="true"
                    app:drawableLeftCompat="@drawable/profile_icon" />

                <TextView
                    android:id="@+id/commentsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:text="@string/comments"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="textStart"
                    android:layout_marginEnd="50dp"
                    android:layout_alignParentRight="true"
                    android:gravity="start"
                    android:layout_marginRight="125dp"
                    app:drawableLeftCompat="@drawable/comment_icon" />

            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>